fixed the z-index issue of navbar

--- a/src/components/NavbarComponent/NavbarComponent.scss
+++ b/src/components/NavbarComponent/NavbarComponent.scss
@@ -90,7 +90,6 @@
 
   border-radius: 10px;
   overflow-y: scroll;
-  background: whitesmoke;
 
   h1 {
     font-size: 20px;
@@ -104,6 +103,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
+
+  z-index: 1000;
 
   width: fit-content;
   margin: auto;
