--- a/src/webpages/DashboardPage/DashboardPage.scss
+++ b/src/webpages/DashboardPage/DashboardPage.scss
@@ -50,8 +50,7 @@
   padding: 10px 0;
   border-radius: 3px;
 
-  background-color: rgba(255, 255, 255, 0.3);
-  backdrop-filter: blur(8px) contrast(45%) brightness(130%);
+  background: white;
 }
 
 @media only screen and (max-width: 572px) {
